[package]
name = "jvm"
version = "0.1.0"
authors = ["徐志强 <652732310@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
clap = {git = "https://github.com/clap-rs/clap.git"}
tracing = {git = "https://github.com/tokio-rs/tracing.git"}
zip = "0.5.6"
nom = "5.1.1"
futures = "0.3"
async-trait = "0.1.38"
typetag = "0.1"
serde_json = { version = "1.0", features = ["raw_value"]}
serde = { version = "1.0", features = ["derive"] }
uneval = "0.2.1"
syn = { version = "1.0.39", features = ["full"] }
quote = "1.0.7"
wasmtime = "*"
base58 = "0.1.0"
anyhow = {version = "^1.0.19"} # follow wasmtime
phf = { git = "https://github.com/sfackler/rust-phf", rev = "8dce12c", features = ["macros"] }
cranelift-module = { version = "0.66.0" }
cranelift-wasm = { version = "0.66.0" }
wasmtime-cranelift = { version = "0.20.0" }
wasmtime-environ = { version = "0.19.0" }
wasmtime-cache = { version = "0.20.0" }
wasmtime-jit = { version = "0.19.0" }
cranelift-native = { version = "0.66.0" }
cranelift-simplejit = { version = "0.66.0" }
cranelift-codegen = { version = "0.66.0", default-features = false, features = ["std"] }
cranelift = {  version = "0.66.0" }
target-lexicon = "0.10"
wat = "1.0.23"

[build-dependencies]
vergen = "3"
uneval = "0.2.1"


[dev-dependencies]
cranelift-frontend = {  version = "0.66.0" }
cranelift-entity = {  version = "0.66.0" }


[workspace]
members = [
  "wasm_invoke"
]